# the-ai-first-co

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  main.py  pyproject.toml
.claude/: mcp.json
.claude/skills/research-company/: SKILL.md
.claude/skills/run-aeo-prospection/: SKILL.md
.claude/skills/scrape-author/: SKILL.md
config/: bison.yaml  llm.yaml
docs/: claude-code-lab-reference.md
local_example/: download_reports.py  test_content_activity.py  test_content_activity_output.txt  test_detect_all_signals.py  test_detect_all_signals_output.txt  test_seo_performance.py  test_seo_performance_output.txt  test_youtube_mentions.py  test_youtube_mentions_output.txt
products/aeo_prospection/: models.py
products/aeo_prospection/claude/: run_prospection.py
products/author_twin/: README.md
products/author_twin/claude/: auto_scrape.sh  report.py  scrape.py
products/author_twin/scrapers/: web_scraper.py  youtube_scraper.py
products/b2b_outreach/: API_KEYS.md  README.md  logging_config.py  models.py  schemas.py
products/b2b_outreach/campaigns/: models.py  sequencer.py  tracker.py
products/b2b_outreach/claude/: run_pipeline.py  seed_supabase.py
products/b2b_outreach/config/: b2b_outreach.yaml  scoring.yaml  supabase_schema.sql
products/b2b_outreach/enrichment/: contact_finder.py  email_verifier.py  models.py
products/b2b_outreach/outreach/: linkedin_formatter.py  message_generator.py  supabase_client.py  whatsapp_formatter.py
products/b2b_outreach/prompts/: generator.py  (+1 more)
products/cmo/: flow.py
shared/: llm_config.py  llm_utils.py  settings.py
(+18 files in other folders)
