[project]
name = "the-ai-first-co"
version = "0.1.0"
description = "AI agent orchestration for businesses. Built on CrewAI."
requires-python = ">=3.12,<3.14"
dependencies = [
    "crewai[tools,anthropic]>=0.108.0",
    "onnxruntime>=1.20.0,<1.24",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["shared", "products"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
